# so_58246366_proc_macro

./: Cargo.toml
derive_fields/: Cargo.toml
derive_fields/src/: lib.rs
fields_impl/: Cargo.toml
fields_impl/src/: lib.rs
