[package]
name = "derive_fields"
version = "0.1.0"
authors = ["Seb Renauld <seb.renauld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"